fix: Prevent card stretching on expansion

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ description: "Thinking will not overcome fear but action will."
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    align-items: flex-start; /* Add this line to prevent stretching */
     margin: 0 -15px; /* Counteract card margin */
 }
 
