fix: Correct group page link in index.html

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ description: "Thinking will not overcome fear but action will."
 <div class="groups-container">
     {% for group in site.data.homepage_groups %}
         {% assign group_id = "" %}
-        {% if group.group_name == "大语言模型学习" %}
+        {% if group.group_name == "分布式训练笔记" %}
             {% assign group_id = "llm" %}
         {% elsif group.group_name == "生活杂记" %}
             {% assign group_id = "life" %}
