fix: Correct group page link for '杂记' in index.html

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ description: "Thinking will not overcome fear but action will."
         {% assign group_id = "" %}
         {% if group.group_name == "分布式训练笔记" %}
             {% assign group_id = "llm" %}
-        {% elsif group.group_name == "生活杂记" %}
+        {% elsif group.group_name == "杂记" %}
             {% assign group_id = "life" %}
         {% endif %}
 
