style: Swap university badge positions in about page

--- a/about.html
+++ b/about.html
@@ -50,9 +50,8 @@ header-img: "img/about-bg.png"
 
 <div class="about-container">
     <div class="badge-container">
-        <img src="{{ site.baseurl }}/img/ynu-badge.jpg" alt="YNU Badge">
-        <img src="{{ site.baseurl }}/img/hnu-badge.png" alt="HNU Badge">
-    </div>
+            <img src="{{ site.baseurl }}/img/hnu-badge.png" alt="HNU Badge">
+            <img src="{{ site.baseurl }}/img/ynu-badge.jpg" alt="YNU Badge">    </div>
 
     <!-- Chinese Version -->
     <div class="zh post-container">
