--- a/about.html
+++ b/about.html
@@ -59,9 +59,9 @@ header-img: "img/about-bg.png"
         <!--copied from markdown -->
         <blockquote><p>热爱技术，分享生活。</p></blockquote>
 
-        <p>Hey，我是<strong>skyfuryonline</strong>，一名来自YNU的NLP方向的研究生。</p>
+        <p>Hey，我毕业于湖南大学计算机科学与技术专业。目前是云南大学NLP方向的研究生。</p>
 
-        <p>我热爱编程，也喜欢乒乓球、散步和观影。</p>
+        <p>热爱编程，热爱乒乓球、散步和长跑。</p>
 
         <p>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com.cn/">Jekyll</a> 搭建的 个人博客。你可以在GitHub上找到我 <a href="https://github.com/skyfuryonline">👉GitHub·skyfuryonline</a>。如果有什么问题，欢迎提出探讨~</p>
 
