--- a/about.html
+++ b/about.html
@@ -59,7 +59,9 @@ header-img: "img/about-bg.png"
         <!--copied from markdown -->
         <blockquote><p>热爱技术，分享生活。</p></blockquote>
 
-        <p>Hey，我毕业于湖南大学计算机科学与技术专业。目前是云南大学NLP方向的研究生。</p>
+        <p>Hey，我毕业于湖南大学计算机科学与技术专业。目前是云南大学研究生。</p>
+
+        <p>如有问题，欢迎多多交流。</p>
 
         <p>热爱编程，热爱乒乓球、散步和长跑。</p>
 
