feat: Implement order control for navigation bar

--- a/daily.html
+++ b/daily.html
@@ -1,6 +1,7 @@
 ---
 layout: page
 title: "Daily"
+nav-order: 1
 description: "每日信息聚合"
 header-img: "img/home-bg.png" # Using home background for now
 ---
