style: Adjust daily page card height and background color

--- a/daily.html
+++ b/daily.html
@@ -28,12 +28,12 @@ header-img: "img/home-bg.png"
     position: relative;
     width: 100%;
     height: 0;
-    padding-bottom: 100%; /* This creates the square aspect ratio */
+    padding-bottom: 50%; /* Halved the height to make it a rectangle */
     border-radius: 10px;
     overflow: hidden;
     box-shadow: 0 4px 8px rgba(0,0,0,0.1);
     transition: all 0.3s ease;
-    background-color: #fff;
+    background-color: #f8f9fa; /* Added a very light gray background */
 }
 
 .square-card-link {
