--- a/daily.html
+++ b/daily.html
@@ -3,6 +3,10 @@ layout: page
 title: "Daily"
 description: "每日信息聚合"
 header-img: "img/home-bg.png"
+http_headers:
+  "Cache-Control": "no-cache, no-store, must-revalidate"
+  "Pragma": "no-cache"
+  "Expires": "0"
 ---
 
 <style>
