debug: Add background color to gallery items for inspection

--- a/daily.html
+++ b/daily.html
@@ -104,7 +104,7 @@ http_headers:
     height: 200px; /* Give the container a fixed height */
     border-radius: 5px;
     overflow: hidden; /* This is crucial for cropping the image */
-    background-color: #eee; /* Add a placeholder color */
+    background-color: red; /* Debug: Visually inspect container boundaries */
 }
 
 #summaryModal .gallery-item img {
