--- a/daily.html
+++ b/daily.html
@@ -85,6 +85,9 @@ http_headers:
     text-align: center;
     margin-bottom: 20px;
     color: #555;
+    font-size: 2em;
+}
+
 /* --- Modal Body Scrolling (Fallback) --- */
 .modal-body {
     max-height: 80vh; /* Max height is 80% of viewport height */
