style: Remove debug background from gallery items

--- a/daily.html
+++ b/daily.html
@@ -107,7 +107,7 @@ http_headers:
     height: 200px; /* Give the container a fixed height */
     border-radius: 5px;
     overflow: hidden; /* This is crucial for cropping the image */
-    background-color: red; /* Debug: Visually inspect container boundaries */
+    background-color: #eee; /* Add a placeholder color */
 }
 
 #summaryModal .gallery-item img {
