style: Change image fit to 'contain' to ensure full visibility

--- a/daily.html
+++ b/daily.html
@@ -107,13 +107,13 @@ http_headers:
     height: 200px; /* Give the container a fixed height */
     border-radius: 5px;
     overflow: hidden; /* This is crucial for cropping the image */
-    background-color: #eee; /* Add a placeholder color */
+    background-color: #ddd; /* Darker placeholder for contain view */
 }
 
 #summaryModal .gallery-item img {
     width: 100%;
     height: 100%; /* Make image fill the container */
-    object-fit: cover; /* Cover the area, crop if needed, no distortion */
+    object-fit: contain; /* Contain the image fully, may leave empty space */
     display: block;
 }
 
