style: Uppercase page titles and update backgrounds

--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: "About"
+title: "ABOUT"
 nav-order: 2
 description: "Hey, this is skyfuryonline."
 header-img: "img/about-bg.png"
