--- a/daily.html
+++ b/daily.html
@@ -1,8 +1,8 @@
 ---
 layout: page
-title: "Daily"
+title: "DAILY"
 description: "每日信息聚合"
-header-img: "img/home-bg.png"
+header-img: "img/daily-bg.png"
 http_headers:
   "Cache-Control": "no-cache, no-store, must-revalidate"
   "Pragma": "no-cache"
