style: Update background images for tags and daily pages

--- a/daily.html
+++ b/daily.html
@@ -2,7 +2,7 @@
 layout: page
 title: "DAILY"
 description: "每日信息聚合"
-header-img: "img/daily-bg.png"
+header-img: "img/daily-bg.jpg"
 http_headers:
   "Cache-Control": "no-cache, no-store, must-revalidate"
   "Pragma": "no-cache"
