fix: Use dynamic source variable in daily.html template

--- a/daily.html
+++ b/daily.html
@@ -163,7 +163,7 @@ We only need to provide the content that goes inside the `col-lg-8` div.
                             <div class="square-card">
                                 <div class="square-card-content">
                                     <h3 class="square-card-title">{{ article.title }}</h3>
-                                    <p class="square-card-meta">Source: cnblogs</p>
+                                    <p class="square-card-meta">Source: {{ article.source }}</p>
                                 </div>
                             </div>
                         </div>
