fix: Correct image path handling

--- a/daily.html
+++ b/daily.html
@@ -230,11 +230,7 @@ document.addEventListener('DOMContentLoaded', function () {
                     galleryItem.className = 'gallery-item';
                     
                     var img = document.createElement('img');
-                    // Construct the correct, URL-encoded path for the image
-                    var pathParts = (cachePath + '/' + imageFile).split('/').map(function(part) {
-                        return encodeURIComponent(part);
-                    });
-                    img.src = '{{ site.baseurl }}/' + pathParts.join('/');
+                    img.src = '{{ site.baseurl }}/' + cachePath + '/' + imageFile;
                     
                     galleryItem.appendChild(img);
                     modalGallery.appendChild(galleryItem);
