--- a/daily.html
+++ b/daily.html
@@ -42,6 +42,11 @@ http_headers:
     cursor: pointer;
 }
 
+.daily-article-card:hover .square-card {
+    box-shadow: 0 8px 16px rgba(0,0,0,0.2);
+    transform: translateY(-5px);
+}
+
 .square-card-link {
     display: block;
     text-decoration: none;
